--- a/index.html
+++ b/index.html
@@ -16,13 +16,104 @@
                 <span class="text">R$ 27,90/mês ou R$ 279,90/ano à vista*</span>
             </p>
             <ul class="hero__content__combos">
-                <li class="hero__content__combos__combo"><img src="./dist/images/logos/disney_star_plus.png" alt="Disney+ & Star+"><br/><button>Assine Agora</button><br/><span class="text">R$ 45,90/mês*</span></li>
-                <li class="hero__content__combos__combo"><img src="./dist/images/logos/disney_star_plus_starzplay.png" alt="Disney+ & Star+ & StarzPlay"><br/><button>Assine Agora</button><br/><span class="text">R$ 55,90/mês*</span></li>
+                <li class="hero__content__combos__combo"><img src="./dist/images/logos/disney_star_plus.png" alt="Disney+ & Star+"><br/><button class="button">Assine Agora</button><br/><span class="text">R$ 45,90/mês*</span></li>
+                <li class="hero__content__combos__combo"><img src="./dist/images/logos/disney_star_plus_starzplay.png" alt="Disney+ & Star+ & StarzPlay"><br/><button class="button">Assine Agora</button><br/><span class="text">R$ 55,90/mês*</span></li>
             </ul>
             <p class="text--small">
                 *O preço pode variar caso a assinatura seja feita através de outras plataformas.
             </p>
         </div>
     </section>
+    <section class="shows">
+        <nav class="shows__tabs">
+            <button class="button shows__tabs__button shows__tabs__button--active" data-tab-button="soon">Em breve</button>
+            <button class="button shows__tabs__button" data-tab-button="popular">Mais populares</button>
+            <button class="button shows__tabs__button" data-tab-button="star">Mais no Star+</button>
+        </nav>
+        <ul data-tab-id="soon" class="shows__list shows__list--active">
+            <li class="shows__list__item">
+                <img src="./src/images/em_breve/desencantada.jpg" alt="Desencantada">
+            </li>
+            <li class="shows__list__item">
+                <img src="./src/images/em_breve/lobisomem.jpg" alt="Lobisomem na Meia-Noite">
+            </li>
+            <li class="shows__list__item">
+                <img src="./src/images/em_breve/sem_limites.jpg" alt="Sem Limites">
+            </li>
+            <li class="shows__list__item">
+                <img src="./src/images/em_breve/spidey.jpg" alt="Spidey">
+            </li>
+            <li class="shows__list__item">
+                <img src="./src/images/em_breve/the_santa_clauses.jpg" alt="The Santa Clauses">
+            </li>
+            <li class="shows__list__item">
+                <img src="./src/images/em_breve/willow.jpg" alt="Willow">
+            </li>
+        </ul>
+        <ul data-tab-id="popular" class="shows__list">
+            <li class="shows__list__item">
+                <img src="./src/images/mais_populares/bluey.jpg" alt="Bluey">
+            </li>
+            <li class="shows__list__item">
+                <img src="./src/images/mais_populares/cavaleira_da_lua.jpg" alt="O Cavaleiro da Lua">
+            </li>
+            <li class="shows__list__item">
+                <img src="./src/images/mais_populares/o_incrivel_dr_pol.jpg" alt="O Incrível Dr. Pol">
+            </li>
+            <li class="shows__list__item">
+                <img src="./src/images/mais_populares/obi_wan.jpg" alt="Obi-wan">
+            </li>
+            <li class="shows__list__item">
+                <img src="./src/images/mais_populares/red.jpg" alt="Red">
+            </li>
+            <li class="shows__list__item">
+                <img src="./src/images/mais_populares/tudo_igual_sqn.jpg" alt="Tudo Igual">
+            </li>
+        </ul>
+        <ul data-tab-id="star" class="shows__list">
+            <li class="shows__list__item">
+                <img src="./src/images/mais_no_star_plus/belair.jpg" alt="Bal-Air">
+            </li>
+            <li class="shows__list__item">
+                <img src="./src/images/mais_no_star_plus/libertadores.jpg" alt="Libertadores">
+            </li>
+            <li class="shows__list__item">
+                <img src="./src/images/mais_no_star_plus/nba.jpg" alt="NBA">
+            </li>
+            <li class="shows__list__item">
+                <img src="./src/images/mais_no_star_plus/os_simpson.jpg" alt="Os Simpsons">
+            </li>
+            <li class="shows__list__item">
+                <img src="./src/images/mais_no_star_plus/premier_league.jpg" alt="Premiere League">
+            </li>
+            <li class="shows__list__item">
+                <img src="./src/images/mais_no_star_plus/the_kardashians.jpg" alt="The Kardashians">
+            </li>
+        </ul>
+    </section>
+    <section class="combos">
+        <h2 class="title--big">Escolha seu plano</h2>
+        <ul class="combos__list">
+            <li class="combos__list__item"><img src="./dist/images/logos/disneyplus_underline.png" alt="Disney+">
+            <strong class="title--small">R$ 27,90/mês*</strong>
+            <p class="text--big">No Disney+ você encontra as últimas estreias do cinema, originais e clássicos inesquecíveis.</p>
+            <button class="button">Assine Agora</button>
+            </li>
+            <li class="combos__list__item"><img src="./dist/images/logos/disney_star_plus_sm.png" alt="Disney+">
+            <strong class="title--small">R$ 27,90/mês*</strong>
+            <p class="text--big">Assine o Disney+ e o Star+ juntos. Economize e aproveite agora os dois serviços por um preço único.</p>
+            <button class="button">Assine Agora</button>
+            </li>
+            <li class="combos__list__item"><img src="./dist/images/logos/disney_star_plus_starzplay_underline.png" alt="Disney+">
+            <strong class="title--small">R$ 27,90/mês*</strong>
+            <p class="text--big">Disney+, Star+ e STARZPLAY em um plano especial. Assine agora os três serviços juntos.</p>
+            <button class="button">Assine Agora</button>
+            </li>
+        </ul>
+        <p class="text--small">
+            *O preço pode variar caso a assinatura seja feita através de outras plataformas.
+        </p>
+    </section>
+    <script src="./src/main.js"></script>
 </body>
 </html>
