--- a/index.html
+++ b/index.html
@@ -114,6 +114,159 @@
             *O preço pode variar caso a assinatura seja feita através de outras plataformas.
         </p>
     </section>
+    <section class="image-text-section">
+        <img src="./dist/images/tv_pc_tablet_celular.png" alt="Assista na TV, Tablet, PC ou Celular.">
+        <div class="image-text-section__text-container">
+            <h2 class="title">Assista do seu jeito</h2>
+            <p class="text--big">Aproveite a tela grande da TV, ou assista no tablet, lapton, celular e outros aparelhos. Nossa seleção de títulos em 4K não para de crescer. Além disso, para a felicidade de todos, é possível assistir em até 4 telas ao mesmo tempo.</p>
+        </div>
+    </section>
+    <section class="image-text-section image-text-section--image-full-width">
+        <img src="./dist/images/fundo_rei_leao.png" alt="Simba, de 'O Rei Leão'.">
+        <div class="image-text-section__text-container image-text-section--image-full-width__text-container">
+            <h2 class="title">Baixe filmes e séries</h2>
+            <p class="text--big">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
+        </div>
+    </section>
+    <section class="available-devices">
+        <h2 class="title">Disponível nos seus dispositivos favoritos</h2>
+        <ul class="available-devices__list">
+            <li class="available-devices__list__item">
+                <img src="./dist/images/dispositivos/computador.png" alt="Computador">
+                <h4 class="title--small">Computador</h4>
+                <ul class="text">
+                    <li>Chrome Os</li>
+                    <li>MacOS</li>
+                    <li>PC Windows</li>
+                </ul>
+            </li>
+            <li class="available-devices__list__item">
+                <img src="./dist/images/dispositivos/tv.png" alt="TV">
+                <h4 class="title--small">TV</h4>
+                <ul class="text">
+                    <li>Amazon Fire TV</li>
+                    <li>Android TV</li>
+                    <li>Apple TV</li>
+                    <li>Chromecast</li>
+                    <li>TVs LG</li>
+                    <li>Roku</li>
+                    <li>Samsung</li>
+                </ul>
+            </li>
+            <li class="available-devices__list__item">
+                <img src="./dist/images/dispositivos/videogames.png" alt="Videogames">
+                <h4 class="title--small">Videogames</h4>
+                <ul class="text">
+                    <li>PS4</li>
+                    <li>PS5</li>
+                    <li>Xbox One</li>
+                    <li>Xbox Series X</li>
+                    <li>Xbox Series S</li>
+                </ul>
+            </li>
+            <li class="available-devices__list__item">
+                <img src="./dist/images/dispositivos/celular.png" alt="Celulares e tablets">
+                <h4 class="title--small">Celulares e tablets</h4>
+                <ul class="text">
+                    <li>Tablets Amazon Fire</li>
+                    <li>Celulares e tablets Android</li>
+                    <li>iPhone e iPad</li>
+                </ul>
+            </li>
+        </ul>
+    </section>
+    <section class="faq">
+        <h2 class="title">Perguntas frequentes</h2>
+        <ul class="faq__questions">
+            <li class="faq__questions__item">
+                <div class="faq__questions__item__question" data-faq-question>
+                    O que está incluído no Disney+?
+                </div>
+                <div class="faq__questions__item__answer text--big">
+                    <p><span>O Disney+ oferece:</span></p>
+                    <p><span>• Experiência premium sem intervalos comerciais.</span></p>
+                    <p><span>• As melhores histórias da Disney, Pixar, Marvel, Star  Wars e National Geographic, tudo num só lugar.</span></p>
+                    <p><span>• Groupwatch: assista junto com seus amigos ou familiares, mesmo separados.</span></p>
+                    <p><span>• Downloads ilimitados em até 10 dispositivos compatíveis.</span></p>
+                    <p><span>• Mais de 300 títulos em 4K UHD e HDR.</span></p>
+                    <p><span>• A possibilidade de assistir em até 4 dispositivos compatíveis simultaneamente sem custo adicional.</span></p>
+                    <p><span>• IMAX Enhanced: disponível para alguns títulos da Marvel em dispositivos compatíveis com o Disney+.</span></p>
+                </div>
+            </li>
+            <li class="faq__questions__item">
+                <div class="faq__questions__item__question" data-faq-question>
+                    O que está incluído no Disney+?
+                </div>
+                <div class="faq__questions__item__answer text--big">
+                    <p><span>O Disney+ oferece:</span></p>
+                    <p><span>• Experiência premium sem intervalos comerciais.</span></p>
+                    <p><span>• As melhores histórias da Disney, Pixar, Marvel, Star  Wars e National Geographic, tudo num só lugar.</span></p>
+                    <p><span>• Groupwatch: assista junto com seus amigos ou familiares, mesmo separados.</span></p>
+                    <p><span>• Downloads ilimitados em até 10 dispositivos compatíveis.</span></p>
+                    <p><span>• Mais de 300 títulos em 4K UHD e HDR.</span></p>
+                    <p><span>• A possibilidade de assistir em até 4 dispositivos compatíveis simultaneamente sem custo adicional.</span></p>
+                    <p><span>• IMAX Enhanced: disponível para alguns títulos da Marvel em dispositivos compatíveis com o Disney+.</span></p>
+                </div>
+            </li>
+            <li class="faq__questions__item">
+                <div class="faq__questions__item__question" data-faq-question>
+                    O que está incluído no Disney+?
+                </div>
+                <div class="faq__questions__item__answer text--big">
+                    <p><span>O Disney+ oferece:</span></p>
+                    <p><span>• Experiência premium sem intervalos comerciais.</span></p>
+                    <p><span>• As melhores histórias da Disney, Pixar, Marvel, Star  Wars e National Geographic, tudo num só lugar.</span></p>
+                    <p><span>• Groupwatch: assista junto com seus amigos ou familiares, mesmo separados.</span></p>
+                    <p><span>• Downloads ilimitados em até 10 dispositivos compatíveis.</span></p>
+                    <p><span>• Mais de 300 títulos em 4K UHD e HDR.</span></p>
+                    <p><span>• A possibilidade de assistir em até 4 dispositivos compatíveis simultaneamente sem custo adicional.</span></p>
+                    <p><span>• IMAX Enhanced: disponível para alguns títulos da Marvel em dispositivos compatíveis com o Disney+.</span></p>
+                </div>
+            </li>
+            <li class="faq__questions__item">
+                <div class="faq__questions__item__question" data-faq-question>
+                    O que está incluído no Disney+?
+                </div>
+                <div class="faq__questions__item__answer text--big">
+                    <p><span>O Disney+ oferece:</span></p>
+                    <p><span>• Experiência premium sem intervalos comerciais.</span></p>
+                    <p><span>• As melhores histórias da Disney, Pixar, Marvel, Star  Wars e National Geographic, tudo num só lugar.</span></p>
+                    <p><span>• Groupwatch: assista junto com seus amigos ou familiares, mesmo separados.</span></p>
+                    <p><span>• Downloads ilimitados em até 10 dispositivos compatíveis.</span></p>
+                    <p><span>• Mais de 300 títulos em 4K UHD e HDR.</span></p>
+                    <p><span>• A possibilidade de assistir em até 4 dispositivos compatíveis simultaneamente sem custo adicional.</span></p>
+                    <p><span>• IMAX Enhanced: disponível para alguns títulos da Marvel em dispositivos compatíveis com o Disney+.</span></p>
+                </div>
+            </li>
+        </ul>
+    </section>
+    <footer class="footer">
+        <div class="footer__container">
+            <img class="footer__logo" src="./dist/images/disneyplus.svg" alt="Disney+"/>
+            <ul class="footer__links">
+                <li class="footer__links__item">
+                    <div class="language-selector">
+                        <img src="./dist/images/icones/globe.svg" alt="Mundo"/>
+                        <select>
+                            <option>English</option>
+                            <option>Español</option>
+                            <option>Français</option>
+                            <option selected>Português(BR)</option>
+                        </select>
+                    </div>
+                </li>
+                <li class="footer__links__item"><a class="text--small" href="#">Termos e Condições de Uso</a></li>
+                <li class="footer__links__item"><a class="text--small" href="#">Política de privacidade</a></li>
+                <li class="footer__links__item"><a class="text--small" href="#">Proteção de dados no Brasil</a></li>
+                <li class="footer__links__item"><a class="text--small" href="#">Anúncios personalizados</a></li>
+                <li class="footer__links__item"><a class="text--small" href="#">Dispositivos compatíveis</a></li>
+                <li class="footer__links__item"><a class="text--small" href="#">Ajuda</a></li>
+                <li class="footer__links__item"><a class="text--small" href="#">Sobre o Disney+</a></li>
+            </ul>
+            <p class="text--small">• 2022 Disney, Disney+ e The Walt Disney Company. Todos os direitos reservados. Serviço de Assinatura paga. Conteúdo sujeito a disponibilidade.</p>
+            <p class="text--small">Disney+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Disney+ é comercializado por The Walt Disney Company (Brasil) Ltda, World Trade Center, Av. Das Nações Unidas, 12.551, 12.555, 12.559, Piso 10, São Paulo/SP - CEP 04578903, Brasil e CNPJ/M 73.042.962/0004-20</p>
+        </div>
+    </footer>
     <script src="./src/main.js"></script>
 </body>
 </html>
